show type switch now works, saves, and the state displays for each new record